tests/snapshots/run_wpt_conformance__trtx_instanceNormalization_float16_4D_tensor_options_epsilon.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "instance_normalization.https.any.js",
    "instanceNormalization float16 4D tensor options.epsilon",
    "trtx",
    "PASS",
)
